--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,25 @@
 @import "tailwindcss";
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+:root {
+  --color-background: #DDDDDD;
+  --color-font: #000000;
+  --color-primary: #7695EC;
+  --font-main: 'Roboto', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--color-background);
+  font-family: var(--font-main);
+}
+
+@theme {
+  --font-display: var(--font-main);
+  --color-primary: #7695EC;
+  --font: #000000
+}
