--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 :root {
-  --color-background: #DDDDDD;
+  --color-background: #dddddd;
   --color-font: #000000;
-  --color-primary: #7695EC;
-  --font-main: 'Roboto', sans-serif;
+  --color-primary: #7695ec;
+  --font-main: "Roboto", sans-serif;
 }
 
 * {
@@ -20,6 +20,6 @@ body {
 
 @theme {
   --font-display: var(--font-main);
-  --color-primary: #7695EC;
-  --font: #000000
+  --color-primary: #7695ec;
+  --font: #000000;
 }
