--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap");
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
@@ -20,6 +21,7 @@
   --color-font: #000000;
   --color-primary: #7695ec;
   --font-main: "Roboto", sans-serif;
+  --font-intro: "Cal Sans", sans-serif;
 }
 
 * {
@@ -35,4 +37,5 @@ body {
   --font-display: var(--font-main);
   --color-primary: #7695ec;
   --font: #000000;
+  --font-intro: "Cal Sans", sans-serif;
 }
